<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_apple"
    app:layoutDescription="@xml/activity_detail_buah_scene"
    tools:context=".bottomnavbar.DetailBuah">

    <LinearLayout
        android:id="@+id/header_details"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/tv_details_fruit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/light"
                android:text="@string/details"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_detail"
        android:layout_width="286dp"
        android:layout_height="286dp"
        android:src="@drawable/apple_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <LinearLayout
        android:id="@+id/item_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/card_detail"
        android:elevation="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_detail">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:scaleX="3"
            android:scaleY="2"
            android:src="@drawable/horizontal_line" />

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:alpha="1"
            android:fontFamily="@font/medium"
            android:text="@string/apel"
            android:textColor="#040303"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_price_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:alpha="1"
                android:fontFamily="@font/medium"
                android:text="@string/harga"
                android:textColor="#434040"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@id/item_detail"
                app:layout_constraintEnd_toEndOf="@id/item_detail"
                app:layout_constraintStart_toStartOf="@id/item_detail"
                app:layout_constraintTop_toTopOf="@id/item_detail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:alpha="1"
                android:fontFamily="@font/medium"
                android:text="@string/kg"
                android:textColor="#434040"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_rating"
            android:layout_width="318dp"
            android:layout_height="57dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/card_rating1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/medium"
                android:text="@string/rating"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="258dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="11dp"
                android:background="@drawable/card_rating2"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_rate1"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:id="@+id/iv_rate2"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:id="@+id/iv_rate3"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:id="@+id/iv_rate4"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:id="@+id/iv_rate5"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_star" />

            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:id="@+id/coba"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_desc_detail"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="200dp"
                    android:alpha="1"
                    android:fontFamily="@font/reguler"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btn_bottom_nav"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_nav"
        android:elevation="20dp"
        app:elevation="20dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/buy"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="17dp"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_buy"
                />

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.motion.widget.MotionLayout>